--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bindings/node",
   "scripts": {
     "generate": "tree-sitter generate",
-    "test": "tree-sitter test"
+    "tree-sitter": "tree-sitter"
   },
   "author": "",
   "license": "ISC",
